--- a/pages/signup/signup.css
+++ b/pages/signup/signup.css
@@ -1,15 +1,30 @@
 .signup-container{
-    /* border: 1px solid red; */
+    /* border:1px solid red; */
     display: flex;
     justify-content: center;
     align-items: center;
     margin-top: 8rem;
     text-align: center;
+    flex-direction: column;
 }
+
 .signup-card{
-    width: 25rem;
-    height: 25rem;
+    width:25rem;
+    height:27rem;
     border: 1px solid #ccc;
-    padding: 1rem;   
-    border-radius: 1rem;
+    padding: 0.5rem;
+}
+
+.bottom-card{
+    width:25rem;
+    border: 1px solid #ccc;
+ padding: 1rem;
+ margin-top: 1rem;
+}
+
+.tnc{
+    width:25rem;
+    padding: 1rem;
+    margin-top: 0.5rem;
+    color:gray;
 }
